5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1800_2563.log
== TEST (2019-06-05 21:48:04) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:48:36) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
	me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:48:48) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
	me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:48:57) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:54:38) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:54:52) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:58:49) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
	while size(me)!=1
		me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
	
-- ERROR:
File "XXXX", line 8
    while size(me)!=1
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:58:56) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
	while size(me)!=1 :
		me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:00:29) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
		while size(me)!=1 :
			me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:00:53) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
		while size(me)!=1 :
			me= array(eval(input("insira as medias dos alunos: ")))
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:01:35) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
		while size(me)!=1 :
			me= array(eval(input("insira as medias dos alunos: ")))
	print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:02:36) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
		print(ap)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:03:37) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
	print(ap)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:04:09) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	if l>=5 and l<7:
		ap=ap+1
print(ap)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:04:56) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	while size(l)!=1:
		if l>=5 and l<7:
			ap=ap+1
print(ap)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:05:22) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
for l in (range(size(me))):
	while size(me)!=1:
		if l>=5 and l<7:
			ap=ap+1
print(ap)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:06:32) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
i=0 
while size(me)!=1:
	for l in (range(size(me))):
		if l>=5 and l<7:
			ap=ap+1
	me= array(eval(input("insira as medias dos alunos: ")))
print(ap)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:16:15) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
while size(me)!=1:
	for l in (range(size(me))):
		if l>=5 and l<7:
			ap=ap+1
			print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:16:30) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
while size(me)!=1:
	for l in (range(size(me))):
		if l>=5 and l<7:
			ap=ap+1
		print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:16:40) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
while size(me)!=1:
	for l in (range(size(me))):
		if l>=5 and l<7:
			ap=ap+1
	print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 22:19:06) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
for l in (range(size(me))):
	print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:19:34) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
while size(me)!=1:
	for l in size(me):
		if l>=5 and l<7:
			ap=ap+1
	print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:20:05) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
ap=0
while size(me)!=1:
	for l in me:
		if l>=5 and l<7:
			ap=ap+1
	print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:22:38) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
while size(me)!=1:
	ap=0
	for l in me:
		if l>=5 and l<7:
			ap=ap+1
	print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:22:54) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
while size(me)!=1:
	ap=0
	for l in me:
		if l>=5 and l<7:
			ap=ap+1
	print(ap)
	me= array(eval(input("insira as medias dos alunos: ")))


-- EXECUTION TIME:
1.09949
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:32:01) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))
while size(me)!=1:
	ap=0
	for l in me:
		print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:32:46) 
-- CODE:
from numpy import*
me= array(eval(input("insira as medias dos alunos: ")))

for l in me:
	print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
